<resources>
    <string name="app_name">Network work work</string>
    <string name="check_connection">Check connection</string>
    <string name="connection_details">Connection Details</string>
    <string name="get_aarhus_weather">Get Aarhus Weather</string>
    <string name="aarhus_weather_details">Aarhus Weather Details</string>
    <string name="parse_json">Parse JSON</string>
    <string name="temperature_from_json">Temperature from JSON</string>
    <string name="to_volley">To Volley</string>
    <string name="to_main">To Main</string>
    <string name="get_weather">Get Weather</string>
    <string name="weather_result">Weather Result</string>
    <string name="weatherresult_json">WeatherResult JSON</string>
    <string name="temperature_in_c">Temperature in C:</string>
    <string name="connection_error">Connection error!</string>
    <string name="parse_error">Parsing error!</string>
</resources>
